# forgekeeper

./: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  ARCHITECTURE_REFACTORING_ANALYSIS.md  AUTONOMOUS_EXTRACTION_PLAN_2025-12-15.md  AUTONOMOUS_EXTRACTION_STATUS_2025-12-15.md  AUTONOMOUS_INTEGRATION_COMPLETE_2025-12-15.md  AUTONOMOUS_INTEGRATION_GUIDE_2025-12-15.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_REVIEW_2025-12-15.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  DEVLOG.md  DIAGNOSIS_GPT_OSS_ISSUES.md  DOCUMENTATION_AUDIT_2025-11-04.md  DOCUMENTATION_REVIEW_2025-11-04.md  Dockerfile  Dockerfile.vllm  ESLINT_FIX_SUMMARY.md  FILE_SUMMARY.md  FRONTEND_ANALYSIS.md  IMPLEMENTATION_STATUS_2025-11-04.md  INTEGRATION_GUIDE.md  INTEGRATION_TEST_SUMMARY.md  LLM_OPTIMIZED_DEVELOPMENT_STRATEGY.md  MULTI_AGENT_SETUP.md  Makefile  NVIDIA System Information 05-05-2025 12-10-55.txt  PHASE1_RECURSIVE_FEEDBACK_COMPLETE.md  PHASE2_META_COGNITION_COMPLETE.md  PHASE3_CROSS_SESSION_LEARNING_COMPLETE.md  PHASE4_COMPLETE_SUMMARY.md  PHASE_2_TOOL_EXECUTION_COMPLETE.md  PYTHON_REFACTORING_COMPLETE_2025-12-15.md  QUICKSTART.md  QUICK_START_AUTONOMOUS.md  QUICK_START_NEXT_SESSION.md  (+65 more)
.forgekeeper/: mcp-servers.example.json
.github/: dependabot.yml  pull_request_template.md
agents/: __init__.py  coder.py  core.py  router.py  session_memory.py  task_committer.py  task_executor.py  task_retriever.py
archive/: .env.example  .gitignore  Dockerfile.vllm  MODULES.md  Makefile  Roadmap.md  docker-compose.dev.yml  pyproject.toml  (+1 more)
archive/forgekeeper-v2/: README.md  TASKS.md  pyproject.toml  tmp_fk_o_test_run_tmp.py
archive/forgekeeper-v2/forgekeeper_v2/: __init__.py
archive/forgekeeper-v2/forgekeeper_v2/memory/: facts_store.py  summarizer.py
archive/forgekeeper-v2/forgekeeper_v2/memory/agentic/: retrieval.py
archive/forgekeeper-v2/forgekeeper_v2/orchestrator/: __init__.py
archive/forgekeeper-v2/forgekeeper_v2/orchestrator/adapters/: llm_base.py  llm_openai.py  llm_triton.py  tool_base.py  tool_powershell.py
archive/forgekeeper-v2/forgekeeper_v2/ui/: README.md
archive/forgekeeper-v2/forgekeeper_v2/ui/web/: package.json  vite.config.ts
archive/forgekeeper-v2/forgekeeper_v2/ui/web/src/components/: InterruptBar.tsx
archive/forgekeeper-v2/tests/: test_policies.py
(+1878 files in other folders)
