[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgekeeper-v2"
version = "0.1.0"
description = "Forgekeeper v2 – Thoughtworld Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [ { name = "Forgekeeper Team" } ]
dependencies = [
  "pydantic>=2.5",
  "typing_extensions>=4.8",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "websockets>=12.0",
  "anyio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["forgekeeper_v2*"]

[project.scripts]
forgekeeper-v2 = "forgekeeper_v2.cli:main"

